--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-native-modalbox": "^1.7.1",
     "react-native-picker-select": "^6.3.3",
     "react-native-render-html": "^4.1.2",
+    "react-native-safe-area-context": "^0.6.2",
     "react-native-vector-icons": "^6.6.0",
     "react-native-xml2js": "^1.0.3",
     "react-navigation": "^3.12.1",
+    "react-navigation-hooks": "^1.1.0",
     "react-redux": "^7.1.1",
     "reactotron-react-native": "^3.6.5",
     "reactotron-redux": "^3.1.1",
