1) inserção de base (estado) dinamico nas requisições do app, ajustando o envio das informações da remoção eletiva, exames, recarga de cilindros e troca/manutenção de equipamentos (modulos de cadastro); 2) Exibir nome do paciente e data de nascimento ao realizar login; 3) Ajuste botão de retornar do modal de solicitações; 4) Ajuste exibição das solicitações abertas; 5) Nas solicitações que contem imagem, adicionar na descrição a seguinte frase: "Imagem anexada"; 6) ajustes na listagem de solicitações abertas, com ordenação; 7) correção de erro de enviar null na descrição de agendamentos;

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SERVER_FLUIG=http://conectahml.homedoctor.com.br
+SERVER_FLUIG=http://conecta.homedoctor.com.br
 COMPANY_FLUIG=1
 USER_FLUIG=reginaldo.medeiros@homedoctor.com.br
 PASS_FLUIG=Eyiupn80!!
@@ -12,12 +12,12 @@ IDException=400
 
 POST_OAUTH_CUSTOMER_KEY=uploadFiles
 POST_OAUTH_CUSTOMER_SECRET_KEY=uploadFiles
-POST_OAUTH_TOKEN=efccfdca-f664-4a7b-b8fd-d158fa3e4e29
-POST_OAUTH_TOKEN_SECRET=50a509ac-0180-4fc3-ae9f-6757ed346bc2488ec66a-40a6-48b8-a406-cf45dc70462a
+POST_OAUTH_TOKEN=2ac4e9ab-9dcc-41fc-95ba-3682b4659990
+POST_OAUTH_TOKEN_SECRET=6ddcd688-c24f-407a-9fb7-3c73f6a935dd428dab01-30aa-4014-be0b-b24577bd1d33
 
-GET_OAUTH_CUSTOMER_KEY=downlodFiles
-GET_OAUTH_CUSTOMER_SECRET_KEY=downlodFiles
-GET_OAUTH_TOKEN=e7c03b1e-3444-41ff-b071-2da01deae546
-GET_OAUTH_TOKEN_SECRET=a2433aa7-c084-429b-9db6-96a4586fe5963a8b815b-2159-4cc7-973e-4e2f639ce049
+GET_OAUTH_CUSTOMER_KEY=wcm_altera_senha
+GET_OAUTH_CUSTOMER_SECRET_KEY=wcm_altera_senha
+GET_OAUTH_TOKEN=50276764-d4a1-482b-821a-2b81d326001f
+GET_OAUTH_TOKEN_SECRET=2c56d68a-84e6-496f-9eb0-14343bc5d8be936b89eb-38bd-44cf-beda-c86e31069279
 
-ID_FOLDER=13656
+ID_FOLDER=13749
