fix: configure code paste on env.production

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SERVER_FLUIG=http://conecta.homedoctor.com.br
+SERVER_FLUIG=http://conectahml.homedoctor.com.br
 COMPANY_FLUIG=1
 USER_FLUIG=reginaldo.medeiros@homedoctor.com.br
 PASS_FLUIG=Eyiupn80!!
