ajustes variaveis de produção

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SERVER_FLUIG=http://conectahml.homedoctor.com.br
+SERVER_FLUIG=http://conecta.homedoctor.com.br
 COMPANY_FLUIG=1
 USER_FLUIG=reginaldo.medeiros@homedoctor.com.br
 PASS_FLUIG=Eyiupn80!!
@@ -11,17 +11,16 @@ DATASET_REGISTER_USER=dsRegistroPacientes
 DATASET_VERSION=ds_versao_app
 IDException=400
 
-POST_OAUTH_CUSTOMER_KEY=wcm_post_hd
-POST_OAUTH_CUSTOMER_SECRET_KEY=wcm_post_hd
-POST_OAUTH_TOKEN=32d2f166-b62f-40b4-ae9a-413196cb7556
-POST_OAUTH_TOKEN_SECRET=50fda59c-39bb-4ca1-820c-14c882aed0f619590cf3-9c97-4fef-8ca1-9ddc1de510f1
+POST_OAUTH_CUSTOMER_KEY=uploadImages
+POST_OAUTH_CUSTOMER_SECRET_KEY=uploadImages
+POST_OAUTH_TOKEN=cd10ed40-8b2e-4949-8d9b-97977e17eb57
+POST_OAUTH_TOKEN_SECRET=6d853f0e-0893-495d-be7d-46619cf7d777b4be5063-5827-46b2-8654-0e5bbc92003c
 
-GET_OAUTH_CUSTOMER_KEY=wcm_get_hd
-GET_OAUTH_CUSTOMER_SECRET_KEY=wcm_get_hd
-GET_OAUTH_TOKEN=da8f5c47-6aa1-4c8d-b409-9520d8e869dc
-GET_OAUTH_TOKEN_SECRET=1e938888-ddaf-4b75-9179-fcaa26b5f1a5350791d2-5acd-4b07-a98f-90b8cf083831
+GET_OAUTH_CUSTOMER_KEY=wcm_altera_senha
+GET_OAUTH_CUSTOMER_SECRET_KEY=wcm_altera_senha
+GET_OAUTH_TOKEN=50276764-d4a1-482b-821a-2b81d326001f
+GET_OAUTH_TOKEN_SECRET=2c56d68a-84e6-496f-9eb0-14343bc5d8be936b89eb-38bd-44cf-beda-c86e31069279
 
-ID_FOLDER=13656
-ID_FOLDER_old=13749
+ID_FOLDER=13749
 
-CURRENT_VERSION=3
+CURRENT_VERSION=14
